# distributed-string-sorting

./: .gitmodules  CMakeLists.txt  README.md  Todo  compile_commands.json  removeEmptyLines.c
NeuKaDiS/KaDiS/include/RQuick/: RQuick.hpp
NeuKaDiS/KaDiS/src/RQuick/: BinTreeMedianSelection.hpp  RQuick.hpp
evaluation/: doubleTable.r  filePlot.r  legendSettings.r  plots.sh  singlePlot.r  tables.sh
evaluation/JSON/: jsonPlot_CommonCrawl  jsonPlot_DToN  jsonPlot_DToNWeak  jsonPlot_Suffix100GB  jsonTable_CommonCrawl  jsonTable_DToN  jsonTable_DToNWeak  jsonTable_Suffix100GB  jsonTable_Wiki
forHLR_results/: allToAll.r  basic_script.r  copyBatch.sh  copyFromForHLR1.sh  copyFromForHLR2.sh  copyFromForLHR2.sh  dataStats.r  evaluate.sh  executeAllPrefixCompression.sh  executeAllPrefixDoubling.sh  general_strong_scaling.r  general_weak_scaling.r  json  jsonCommonCrawl  jsonDToN  jsonNoLcp  jsonWiki  overall.r  perf.sh  prefixCompression.r  prefixDoubling.r  presPrefixCompression.r  presPrefixDoubling.r  processDataToInputFile.sh  splitterSort.r  strangeMpiBehaviour.r  uploadToForHLR1.sh
forHLR_results/evaluation/: dnPlot.r  doubleTable.r  doubleTableSpeedup.r  filePlot.r  implementationDetails.r  legendSettings.r  multipleTablesCommunication.r  multipleTablesSpeedup.r  plots.sh  replace.sh  singlePlot.r  singleTable.r  singleTableMemory.r  singleTableSpeedup.r  tables.sh
forHLR_results/evaluation/JSON/: jsonPlot_CommonCrawl  jsonPlot_CommonCrawlReduced  jsonPlot_DToN  jsonPlot_DToNSkewed  jsonPlot_DToNSkewedWeak  jsonPlot_DToNWeak  jsonPlot_DToNWeakMemory  jsonPlot_ImplementationAlltoall  jsonPlot_Suffix100GB  jsonPlot_Wiki  jsonPlot_WikiReduced  jsonTableMemory_DToNWeak  jsonTable_CommonCrawl  jsonTable_CommonCrawlReduced  jsonTable_DToN  jsonTable_DToNSkewed  jsonTable_DToNSkewedWeak  jsonTable_DToNWeak  jsonTable_DToNWeak_speedup  jsonTable_DToN_speedup  jsonTable_Files  jsonTable_Suffix100GB  jsonTable_Wiki  jsonTable_WikiReduced
run/: move.sh  startjobs.sh
run_forHLR1/: DToN.sh  DToNSkewed.sh  DToNSkewedWeak.sh  DToNWeak.sh  File.sh  Suffix.sh  allToAllPrefix.sh  debug  hQuicksort.sh  hQuicksort_file.sh  hQuicksort_skewed.sh  hQuicksort_suffix.sh  hQuicksort_weak.sh  hQuicksort_weak_skewed.sh  kurpicz.sh  kurpicz_file.sh  kurpicz_skewed.sh  kurpicz_suffix.sh  kurpicz_weak.sh  kurpicz_weak_skewed.sh  mergeSortComplete  mergeSortNoDistSampling  mergeSortTest  merge_sort.sh  merge_sort_file.sh  merge_sort_noDistSampling.sh  merge_sort_skewed.sh  merge_sort_suffix.sh  merge_sort_weak.sh  merge_sort_weak_skewed.sh  move.sh  moveFromFile.sh  moveFromFileIntern.sh  moveIntern.sh  moveNew.sh  mpitest.sh  prefixDoublingTest  prefixWrittenResults  prefix_doubling.sh  prefix_doubling_file.sh  (+20 more)
run_forHLR1/File_prefix_doubling_file.sh/jobIds/: prefix_doubling_file.sh.txt
run_forHLR1/File_prefix_doubling_file.sh/tmpScripts/: #export_tmpScripts.sh  #module_tmpScripts.sh  I_MPI_HYDRA_BRANCH_COUNT=-1_tmpScripts.sh  byteEncoder=5_tmpScripts.sh  load_tmpScripts.sh  module_tmpScripts.sh  numOfIterations=3_tmpScripts.sh  numOfStrings=5000000_tmpScripts.sh  path=DummyPath_tmpScripts.sh
run_forHLR2/: allToAllPrefix.sh  default.sh  startjobs.sh
src/: CMakeLists.txt  dsss_kurpicz.cpp
src/encoding/: bit_stream.hpp  delta_stream.hpp  golomb_bit_stream.hpp  golomb_encoding.hpp  integer_compression.hpp  thrill_math.hpp
src/executables/: CMakeLists.txt  HQuicksort.cpp  distributed_sorter.cpp  prefix_doubling.cpp  variantSelection.hpp  writeSuffixesToFile.cpp
src/hash/: xxhash.hpp
src/merge/: bingmann-lcp_losertree.hpp  stringptr.hpp  stringtools.hpp
src/mpi/: allgather.hpp  allreduce.hpp  alltoall.hpp  big_type.hpp  byte_encoder.hpp  environment.cpp  environment.hpp  gather.hpp  is_sorted.hpp  readInput.hpp  shift.hpp  synchron.hpp  type_mapper.hpp  warmup.hpp  writeToFile.hpp
src/sorter/: isort.hpp
src/sorter/RQuick/: BinTreeMedianSelection.hpp  RQuick.hpp
src/sorter/distributed/: .lcp_aware_number_string_splitting.hpp.swo  bloomfilter.hpp  duplicateSorting.hpp  lcp_aware_number_string_splitting.hpp  merging.hpp  misc.hpp  prefix_doubling.hpp  samplingStrategies.hpp  tracker.hpp
src/sorter/local/strings/: insertion_sort.hpp  insertion_sort_lcp.hpp  insertion_sort_unified.hpp  multikey_quicksort.hpp  multikey_quicksort_lcp.hpp  multikey_quicksort_unified.hpp  radix_sort_unified.hpp  string_set.hpp
src/strings/: stringcontainer.hpp  stringptr.hpp  stringset.hpp  stringtools.hpp
src/tests/: CMakeLists.txt  DNGenerator_tests.cpp  DNGenerator_tests.hpp  allTests.cpp  allgather_simple_test.cpp  alltoallStrings_tests.cpp  bloomfilter.cpp  bloomfilter_tests.cpp  distributedSorter_tests.cpp  distributedSplitterSort_test.cpp  distributed_sorter.cpp  gather_tests.cpp  generateSuffixes_tests.cpp  generator.cpp  golomb_encoding.cpp  integerCompression_tests.cpp  isSorted_tests.cpp  is_sorted.cpp  lcp_string_container.cpp  local_sorter.cpp  losertree.cpp  measuringTool_tests.cpp  measuringTool_tests.hpp  memory_test.cpp  mpi.cpp  pipelinedGolombEncoding_tests.cpp  prefix_doubling.cpp  readFilesTests.cpp  send_test.cpp  sorter_with_LcpStringPtr.cpp  valueTracker_test.hpp
src/tests/catch/: string_set_tests.cpp  string_set_tests.hpp
src/tests_old/: CMakeLists.txt  is_sorted.cpp  lcp_compression.cpp  lcp_string_container.cpp  memory_test.cpp  shift_test.cpp
src/tests_old/catch/: CMakeLists.txt
src/util/: draw_from_distribution.hpp  leanNonTimer.hpp  measuringTool.hpp  nonTimer.hpp  random_string_generator.hpp  structs.hpp  timer.hpp  valueTracker.hpp
