add_executable(alltoallStringsTests alltoallStrings_tests.cpp ../mpi/environment.cpp)
target_link_libraries(alltoallStringsTests ${MPI_LIBRARIES} tlx)
if(MPI_FOUND)
add_test(alltoallStringsTests1 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 1 ${CMAKE_CURRENT_BINARY_DIR}/alltoallStringsTests)
add_test(alltoallStringsTests2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/alltoallStringsTests)
add_test(alltoallStringsTests4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/alltoallStringsTests)
add_test(alltoallStringsTests8 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/alltoallStringsTests)
endif()

add_executable(bloomfilterTests bloomfilter_tests.cpp ../mpi/environment.cpp)
target_link_libraries(bloomfilterTests ${MPI_LIBRARIES} tlx)
if(MPI_FOUND)
add_test(bloomfilterTests1 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 1 ${CMAKE_CURRENT_BINARY_DIR}/bloomfilterTests)
add_test(bloomfilterTests2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/bloomfilterTests)
add_test(bloomfilterTests4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/bloomfilterTests)
add_test(bloomfilterTests8 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/bloomfilterTests)
endif()

add_executable(dnGeneratorTests DNGenerator_tests.cpp ../mpi/environment.cpp)
target_link_libraries(dnGeneratorTests ${MPI_LIBRARIES} tlx)
add_test(dnGeneratorTests1 ${CMAKE_CURRENT_BINARY_DIR}/dnGeneratorTests)

add_executable(pipelinedGolombEncodingTests pipelinedGolombEncoding_tests.cpp ../mpi/environment.cpp)
target_link_libraries(pipelinedGolombEncodingTests ${MPI_LIBRARIES} tlx)
if(MPI_FOUND)
add_test(pipelinedGolombEncodingTests1 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 1 ${CMAKE_CURRENT_BINARY_DIR}/pipelinedGolombEncodingTests)
add_test(pipelinedGolombEncodingTests2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/pipelinedGolombEncodingTests)
add_test(pipelinedGolombEncodingTests4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/pipelinedGolombEncodingTests)
add_test(pipelinedGolombEncodingTests8 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/pipelinedGolombEncodingTests)
endif()

add_executable(readFilesTests readFilesTests.cpp ../mpi/environment.cpp)
target_link_libraries(readFilesTests ${MPI_LIBRARIES} tlx)
if(MPI_FOUND)
add_test(readFilesTests1 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 1 ${CMAKE_CURRENT_BINARY_DIR}/readFilesTests)
add_test(readFilesTests2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/readFilesTests)
add_test(readFilesTests4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/readFilesTests)
add_test(readFilesTests8 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/readFilesTests)
endif()

add_executable(distributedSorterTests distributedSorter_tests.cpp ../mpi/environment.cpp)
target_link_libraries(distributedSorterTests ${MPI_LIBRARIES} tlx)
if(MPI_FOUND)
add_test(distributedSorterTests1 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 1 ${CMAKE_CURRENT_BINARY_DIR}/distributedSorterTests)
add_test(distributedSorterTests2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/distributedSorterTests)
add_test(distributedSorterTests4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/distributedSorterTests)
add_test(distributedSorterTests8 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/distributedSorterTests)
endif()

add_executable(isSortedTests isSorted_tests.cpp ../mpi/environment.cpp)
target_link_libraries(isSortedTests ${MPI_LIBRARIES} tlx)
if(MPI_FOUND)
add_test(isSortedTests1 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 1 ${CMAKE_CURRENT_BINARY_DIR}/isSortedTests)
add_test(isSortedTests2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/isSortedTests)
add_test(isSortedTests4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/isSortedTests)
add_test(isSortedTests8 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/isSortedTests)
endif()

add_executable(gatherTests gather_tests.cpp ../mpi/environment.cpp)
target_link_libraries(gatherTests ${MPI_LIBRARIES} tlx)
if(MPI_FOUND)
add_test(gatherTests1 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 1 ${CMAKE_CURRENT_BINARY_DIR}/gatherTests)
add_test(gatherTests2 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 2 ${CMAKE_CURRENT_BINARY_DIR}/gatherTests)
add_test(gatherTests4 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 4 ${CMAKE_CURRENT_BINARY_DIR}/gatherTests)
add_test(gatherTests8 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 8 ${CMAKE_CURRENT_BINARY_DIR}/gatherTests)
endif()
add_executable(integerCompressionTests integerCompression_tests.cpp ../mpi/environment.cpp)
target_link_libraries(integerCompressionTests ${MPI_LIBRARIES} tlx)
add_test(integerCompressionTests1 ${MPIEXEC} ${MPIEXEC_NUMPROC_FLAG} 1 ${CMAKE_CURRENT_BINARY_DIR}/integerCompressionTests)
